# pastel_standalone_cuda_miner

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
build-aux/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  pastel_miner.sln  pastel_miner.vcxproj  pastel_miner.vcxproj.filters  pastel_miner_gtest.vcxproj  pastel_miner_gtest.vcxproj.filters
cmake/: FindLibEvent.cmake
include/: blake2b.h  compat.h  local_types.h  rpc_error.h
include/compat/: byteswap.h  endian.h  pastel-config.h
src/: main.cpp
src/cuda/: blake2b_device.cu  kernel.cu  kernel.h  memutils.cu  memutils.h
src/equihash/: blake2b_host.cpp  blake2b_host.h  block.cpp  block.h  equihash-check.cpp  equihash-check.h  equihash-helper.cpp  equihash-helper.h  equihash-types.h  equihash.cpp  equihash.cu  equihash.h
src/gpu/: kernel.cu  kernel.h  memutils.cu  memutils.h
src/gtest/: blake2b_cuda_test.cu  blake2b_host_test.cpp  miner_test.cpp
src/kernel/: blake2b_device.cu  blake2b_device.h  byteswap.h  cuda3darray.h  kernel.cu  kernel.h  memutils.cu  memutils.h
src/stratum/: client.cpp  client.h  client_intf.h  json-rpc-client.cpp  json-rpc-client.h  miner.cpp  miner.h
src/utils/: arith_uint256.cpp  config-parser.cpp  config-parser.h  enum_util.h  hash.cpp  hash.h  json-rpc-client.cpp  json-rpc-client.h  logger.cpp  logger.h  numconvert.h  random.cpp  random.h  serialize.h  sha256.cpp  sha256.h  str_utils.h  streams.h  strencodings.cpp  strencodings.h  svc_thread.h  uint256.cpp  uint256.h  util.cpp  util.h
